--- a/index.html
+++ b/index.html
@@ -15,140 +15,123 @@
 
 <body>
     <!-- Esta es la barra de navegación -->
-    <div class="bnav">
+    <div class="barra-nav">
         <nav>
-            <div class="bnav-logo"> Digital Dreamers</div> <!-- colocar imagen -->
-            <div class="bnav-menu"> <!-- conectar las páginas -->
-                <a class="botbarra" href="index.html">Inicio </a>
-                <a class="botbarra" href="nosotras.html">Sobre nosotras</a>
-                <a class="botbarra" href="valores.html"> Nuestros valores </a>
-                <a class="botbarra" href="contacto.html"> Contacto </a>
+            <div class="nav-logo"> Digital Dreamers</div>
+            <div class="nav-menu">
+                <a class="menu-boton" href="index.html">Inicio </a>
+                <a class="menu-boton" href="nosotras.html">Sobre nosotras</a>
+                <a class="menu-boton" href="valores.html">Nuestros valores</a>
+                <a class="menu-boton" href="contacto.html">Contacto</a>
+                <a class="menu-boton" href="calculadora.html">Calculadora</a>
             </div>
-            <div class="bnav-buscador">
-                <input type="text" placeholder="Quiero encontrar...">
+            <div class="nav-buscador">
+                <input type="text" placeholder="Buscar">
                 <button type="submit">🔍</button>
             </div>
         </nav>
     </div>
 
 
-
-
-
-
     <!-- Esta es la presentación de la página -->
-    <div><!-- div padre -->
-        <div class="titulo"> <!-- Saludo -->
+    <div class="seccion1">
+        <div class="titulo">
             <h1><b>¡Bienvenid@ a Digital Dreamers!</b></h1>
         </div>
         <div class="slogan">
-            <h3>Aquí, las ideas se transforman en experiencias digitales únicas. </h3>
+            <h3>Aquí, las ideas se transforman en experiencias digitales únicas 💻✨</h3>
         </div>
 
-
-        <div class="grid">
-            <div class="presenta">
-                <p> Somos cuatro programadoras apasionadas por el diseño web, la estética y el trabajo colaborativo,
-                    listas
-                    para dar vida a ideas y transformarlas en experiencias digitales con precisión, estilo y pasión
-                    creativa.
-                    Cada proyecto es para nosotras un espacio donde la organización se encuentra con la imaginación, y
-                    donde
-                    los sueños se convierten en código que inspira, conecta y comunica.</p>
+        <div class="sec1-presentacion">
+            <div class="sec-texto">
+                <p>Somos cuatro programadoras apasionadas por el diseño web, la estética y el trabajo colaborativo.
+                    Estamos listas para dar vida a ideas y convertirlas en experiencias digitales llenas de precisión,
+                    estilo y creatividad.
+                    Cada proyecto es un universo donde la organización se encuentra con la imaginación, y donde los
+                    sueños se vuelven código que inspira, conecta y comunica ❤️👩‍💻.
+                </p>
             </div>
-            <div class="imgg"> <!-- colocar imagen -->
-                <img src="img1-index.png" alt="cuatro chicas programadoras" width="300px" height="300px">
+            <div class="sec-img">
+                <img src="IMG/img1-index.png" alt="cuatro chicas programadoras" width="300px" height="300px">
             </div>
         </div>
     </div>
 
-
     <!-- Esta es la presentación del propósito de nuestra marca -->
-    <div> <!-- div padre -->
+    <div class="seccion2">
         <div>
-            <h2 class="titulo">Porque programar con propósito</h2>
+            <h2 class="titulo">🎯 Porque programar con propósito..</h2>
         </div>
-        <div class="grid2">
-            <div class="imggg">
-                <img src="imgobj.png" alt="nuestros objetivos"  width="400px" height="300px"> <!-- colocar imagen-->
+        <div class="sec2-proposito">
+            <div class="sec-img">
+                <img src="IMG/imgobj.png" alt="nuestros objetivos" width="400px" height="300px">
             </div>
-            <div class="proposito">
-                <p>Es desarrollar y diseñar soluciones web innovadoras que combinen estética, funcionalidad y
-                    organización, mediante un trabajo colaborativo en el que transformemos nuestras ideas y sueños —y
-                    los de
-                    nuestros
-                    clientes— en experiencias digitales únicas, capaces de inspirar, comunicar y generar impacto
-                    positivo.
+            <div class="sec-texto">
+                <p>es crear soluciones web innovadoras que mezclen estética 🎨, funcionalidad ⚙️ y
+                    organización 📋.
+                    Lo hacemos con un espíritu de colaboración donde nuestras ideas (¡y las tuyas!) cobran vida en forma
+                    de
+                    experiencias digitales que inspiran, comunican y dejan huella.
                 </p>
             </div>
         </div>
     </div>
 
-
     <!-- Esta es la presentación de cada integrante del equipo -->
-    <div> <!-- div padre -->
+    <div class="seccion3">
         <div>
-            <h2 class="titulo">Cuatro mentes, un mismo código</h2>
+            <h2 class="titulo"> Cuatro mentes, un mismo código 💻</h2>
         </div>
-
 
         <div class="slogan">
-            <h3>Formamos un equipo sin igual.</h3>
+            <h3>¡Formamos un equipo sin igual! </h3>
         </div>
 
+        <div class="cont-equipo">
 
-        <div class="contenedor-equipo">
-            <div class="card">
-                <img src="img2.png" alt="Foto de Marcell"> <!-- colocar imagen -->
-                <div class="card-texto">
-                    <h3>Marcell</h3>
-                    <p>Especialista en diseño UI/UX, amante de la estética y el detalle en cada proyecto.</p>
+            <div class="cont-tarjeta">
+                <img src="IMG/img2.png" alt="Foto de Marcell">
+                <div class="tarjeta-texto">
+                    <h3>Marcell 🌸</h3>
+                    <p>Especialista en diseño UI/UX, amante del detalle y la belleza en cada proyecto.</p>
                 </div>
             </div>
 
-
-            <div class="card">
-                <img src="img2.png" alt="Foto de Yamileth"> <!-- colocar imagen -->
-                <div class="card-texto">
-                    <h3>Yamileth</h3>
-                    <p>Programadora front-end apasionada por el código limpio y funcional.</p>
+            <div class="cont-tarjeta">
+                <img src="IMG/img2.png" alt="Foto de Yamileth">
+                <div class="tarjeta-texto">
+                    <h3>Yamileth 💻</h3>
+                    <p>Front-end developer apasionada por un código limpio, funcional y elegante.</p>
                 </div>
             </div>
 
-
-            <div class="card">
-                <img src="img2.png" alt="Foto de María"> <!-- colocar imagen -->
-                <div class="card-texto">
-                    <h3>María</h3>
-                    <p>Creativa en maquetación web y experta en transformar ideas en interfaces.</p>
+            <div class="cont-tarjeta">
+                <img src="IMG/img2.png" alt="Foto de María">
+                <div class="tarjeta-texto">
+                    <h3>María 💡</h3>
+                    <p>Creativa en maquetación web, transforma ideas en interfaces que conectan.</p>
                 </div>
             </div>
 
-
-            <div class="card">
-                <img src="img2.png" alt="Foto de Sandra"> <!-- colocar imagen -->
-                <div class="card-texto">
-                    <h3>Sandra</h3>
+            <div class="cont-tarjeta">
+                <img src="IMG/img2.png" alt="Foto de Sandra">
+                <div class="tarjeta-texto">
+                    <h3>Sandra 🚀</h3>
                     <p>Desarrolladora full stack con visión estratégica y amor por la innovación.</p>
                 </div>
             </div>
+
         </div>
-
-
     </div>
 
-
-    <div class="sec-atajo">
+    <div class="seccion4">
         <div>
-            <h2 class="titulo">Conoce más sobre</h2>
+            <h2 class="titulo">🌱 Conoce más sobre...</h2>
         </div>
-        <div class="botonn">
-            <a class="bot-nosotras" href="nosotras.html">Nosotras</a>
+        <div class="atajo-boton">
+            <a class="boton-nosotras" href="nosotras.html">Nosotras</a>
         </div>
     </div>
-
-
-
 
     <footer>
         <p>© 2025 Digital Dreamers. Todos los derechos reservados.</p>
