--- a/nosotras.html
+++ b/nosotras.html
@@ -12,23 +12,17 @@
 
 <body>
 
-    <!-- Esta es la barra de navegación -->
-    <div class="barra-nav">
-        <nav>
-            <div class="nav-logo"> Digital Dreamers</div>
-            <div class="nav-menu">
-                <a class="menu-boton" href="index.html">Inicio </a>
-                <a class="menu-boton" href="nosotras.html">Sobre nosotras</a>
-                <a class="menu-boton" href="valores.html">Nuestros valores</a>
-                <a class="menu-boton" href="contacto.html">Contacto</a>
-                <a class="menu-boton" href="calculadora.html">Calculadora</a>
-            </div>
-            <div class="nav-buscador">
-                <input type="text" placeholder="Buscar">
-                <button type="submit">🔍</button>
+    <header class="main-header-container">
+        <nav class="bnav">
+            <div class="bnav-logo">Digital Dreamers</div>
+            <div class="bnav-menu">
+                <a class="botbarra" href="index.html">Inicio </a>
+                <a class="botbarra" href="nosotras.html">Sobre nosotras</a>
+                <a class="botbarra" href="valores.html"> Nuestros valores </a>
+                <a class="botbarra" href="contacto.html"> Contacto </a>
             </div>
         </nav>
-    </div>
+    </header>
 
     <section class="hero-section-container main-content-width">
         <div class="hero-content">
@@ -105,14 +99,15 @@
         </div>
     </section>
 
-    <footer>
-        <p>© 2025 Digital Dreamers. Todos los derechos reservados.</p>
+    <footer class="main-footer-container">
+        <div class="footer-content main-content-width">
+            &copy; 2025 Digital Dreamers. Todos los derechos reservados.
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous">
-        </script>
-
+        integrity="sha384-ndDqU0Gzau9qJllfW4pNL1hNTkCfHzAVBReH9diLvGRem5+R9g2FzZGN954050"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
